add a homepage mockup

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,20 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
+$web-font-path: "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700";
+@import url($web-font-path);
+
+$font-family-sans-serif:  "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-serif:       Georgia, "Times New Roman", Times, serif;
+$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
+$font-family-base:        $font-family-sans-serif;
+
+$navbar-height:           80px;
+
+$navbar-default-bg:        #fff;
+$navbar-default-border:    darken($navbar-default-bg, 6.5%) !default;
+
+$nav-link-padding: 10px 20px;
+
+
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
@@ -12,42 +28,26 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 body {
   padding: 0;
+  margin-top: $navbar-height + 10;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
+.navbar-nav > li > a {
+    font-weight: 500;
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-  }
+.navbar-brand  {
+    padding: 20px 20px;
 }
 
-/* Custom page footer */
 .footer {
   padding-top: 19px;
   color: #777;
-  border-top: 1px solid #e5e5e5;
 }
 
 .container-narrow > hr {
   margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
@@ -67,25 +67,34 @@ body {
   }
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
+.row .col-no-pad{
+    padding: 0px;
+}
 
-  /* Remove the padding we set earlier */
+.sdg-img{
+    max-width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+
   .header,
   .marketing,
   .footer {
     padding-left: 0;
     padding-right: 0;
   }
-  /* Space out the masthead */
+
   .header {
     margin-bottom: 30px;
   }
-  /* Remove the bottom border on the jumbotron for visual effect */
+
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+@media screen and (max-width: 766px) {
+    .sdg-img{
+        width: 100%;
+    }
 }
