--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,1 +1,7 @@
 
+<div>
+    <div class="row">
+        <div ng-repeat="goal in goals.results" class="col-sm-2 col-no-pad"><img ng-src="{{ goal.image_medium }}" class="sdg-img"></div>
+        <div class="col-sm-2 col-no-pad"><img ng-src="images/sdgs-box.png" class="sdg-img"></div>
+    </div>
+</div>
