--- a/app/views/goal.html
+++ b/app/views/goal.html
@@ -53,9 +53,9 @@
                 </div>
                 <div>
                     <div ng-switch="indicator.stats_available" class="pull-right">
-                      <div ng-switch-when="YES" class="label label-success"><i class="fa fa-line-chart"></i> Statistics are available</div>
-                      <div ng-switch-when="PARTIALLY" class="label label-warning"><i class="fa fa-line-chart"></i> Some of statistics are available</div>
-                      <div ng-switch-when="NO" class="label label-danger"><i class="fa fa-line-chart"></i> Statistics are not available</div>
+                      <div ng-switch-when="YES" class="label label-success"><i class="fa fa-line-chart"></i> Statistics available</div>
+                      <div ng-switch-when="PARTIALLY" class="label label-warning"><i class="fa fa-line-chart"></i> Some of statistics available</div>
+                      <div ng-switch-when="NO" class="label label-danger"><i class="fa fa-line-chart"></i> Statistics not available</div>
                       <div ng-switch-when="UNKNOWN" class="label label-default"><i class="fa fa-line-chart"></i> Statistics availability Unkonwn</div>
                     </div>
                 </div>
