--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -98,20 +98,24 @@ body {
 
 @media screen and (min-width: 768px) {
 
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
+    .container.container-narrow{
+        max-width: 800px;
+    }
 
-  .header {
-    margin-bottom: 30px;
-  }
+    .header,
+    .marketing,
+    .footer {
+        padding-left: 0;
+        padding-right: 0;
+    }
 
-  .jumbotron {
-    border-bottom: 0;
-  }
+    .header {
+        margin-bottom: 30px;
+    }
+
+    .jumbotron {
+        border-bottom: 0;
+    }
 }
 
 @media screen and (max-width: 766px) {
