--- a/app/views/goal.html
+++ b/app/views/goal.html
@@ -56,7 +56,7 @@
                       <div ng-switch-when="YES" class="label label-success"><i class="fa fa-line-chart"></i> Statistics available</div>
                       <div ng-switch-when="PARTIALLY" class="label label-warning"><i class="fa fa-line-chart"></i> Some of statistics available</div>
                       <div ng-switch-when="NO" class="label label-danger"><i class="fa fa-line-chart"></i> Statistics not available</div>
-                      <div ng-switch-when="UNKNOWN" class="label label-default"><i class="fa fa-line-chart"></i> Statistics availability Unkonwn</div>
+                      <div ng-switch-when="UNKNOWN" class="label label-default"><i class="fa fa-line-chart"></i> Statistics availability: Unkonwn</div>
                     </div>
                 </div>
             </div>
