--- a/app/views/goal.html
+++ b/app/views/goal.html
@@ -4,7 +4,7 @@
     <div class="col-sm-3"><img ng-src="{{ goal.image_medium }}" class="sdg-img"></div>
     <div class="col-sm-9">
         <div class="page-header">
-            <h4 class="text-info">Goal No: {{ goal.code }}</h4>
+            <h4 class="text-info" translate>Goal No: {{ goal.code }}</h4>
             <h1>{{ goal.name }}</h1>
         </div>
         <div class="lead">{{ goal.description }}</div>
@@ -14,7 +14,7 @@
 <div class="text-right">
     <span class="btn btn-primary">
         <span class="badge">{{ indicators.count }}</span>
-        Targets
+        <translate>Targets</translate>
     </span>
 </div>
 
@@ -27,7 +27,7 @@
                 <div class="row indicator-target">
                     <div class="col-xs-1 text-center">
                         <div>
-                            <small class="text-success hidden-xs"><strong>Target</strong></small>
+                            <small class="text-success hidden-xs"><strong translate>Target</strong></small>
                         </div>
                         <div>
                             <i class=" text-info fa fa-dot-circle-o"></i>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-1 text-center">
-                        <div class="text-muted hidden-xs"><strong>Indicator</strong></div>
+                        <div class="text-muted hidden-xs"><strong translate>Indicator</strong></div>
                         <div class="text-info lead">{{ indicator.code }}</div>
                     </div>
                     <div class="col-xs-11">
@@ -53,10 +53,10 @@
                 </div>
                 <div>
                     <div ng-switch="indicator.stats_available" class="pull-right">
-                      <div ng-switch-when="YES" class="label label-success"><i class="fa fa-line-chart"></i> Statistics available</div>
-                      <div ng-switch-when="PARTIALLY" class="label label-warning"><i class="fa fa-line-chart"></i> Some of statistics available</div>
-                      <div ng-switch-when="NO" class="label label-danger"><i class="fa fa-line-chart"></i> Statistics not available</div>
-                      <div ng-switch-when="UNKNOWN" class="label label-default"><i class="fa fa-line-chart"></i> Statistics availability: Unkonwn</div>
+                      <div ng-switch-when="YES" class="label label-success"><i class="fa fa-line-chart"></i> <translate>Statistics available</translate></div>
+                      <div ng-switch-when="PARTIALLY" class="label label-warning"><i class="fa fa-line-chart"></i> <translate>Some of statistics available</translate></div>
+                      <div ng-switch-when="NO" class="label label-danger"><i class="fa fa-line-chart"></i> <translate>Statistics not available</translate></div>
+                      <div ng-switch-when="UNKNOWN" class="label label-default"><i class="fa fa-line-chart"></i> <translate>Statistics availability: Unkonwn</translate></div>
                     </div>
                 </div>
             </div>
