--- a/app/views/goal.html
+++ b/app/views/goal.html
@@ -20,7 +20,7 @@
 
 <div class="listing">
 
-    <div ng-repeat="indicator in indicators.results" class="well" ng-click="goto('/indicators/' + indicator.id )">
+    <div ng-repeat="indicator in indicators.results" class="well" ng-click="goto('/indicators/' + indicator.id + '/' + indicator.slug)">
         <div class="row">
             <div class="col-sm-2"><img class="img-responsive" ng-src="{{ indicator.image_medium }}"></div>
             <div class="col-sm-10">
@@ -36,7 +36,7 @@
                     </div>
                     <div class="col-xs-11">
                         <h4 class="">
-                            <a ng-href="/#!/indicators/{{ indicator.id }}" class="text-primary">{{ indicator.target_description }}</a>
+                            <a ng-href="/#!/indicators/{{ indicator.id }}/{{ indicator.slug }}" class="text-primary">{{ indicator.target_description }}</a>
                         </h4>
                     </div>
                 </div>
