--- a/app/views/goal.html
+++ b/app/views/goal.html
@@ -1,67 +1,70 @@
+<div class="container">
 
-
-<div class="row">
-    <div class="col-sm-3"><img ng-src="{{ goal.image_medium }}" class="sdg-img"></div>
-    <div class="col-sm-9">
-        <div class="page-header">
-            <h4 class="text-info" translate>Goal No: {{ goal.code }}</h4>
-            <h1>{{ goal.name }}</h1>
-        </div>
-        <div class="lead">{{ goal.description }}</div>
     </div>
-</div>
 
-<div class="text-right">
-    <span class="btn btn-primary">
-        <span class="badge">{{ indicators.count }}</span>
-        <translate>Targets</translate>
-    </span>
-</div>
+    <div class="row">
+        <div class="col-sm-3"><img ng-src="{{ goal.image_medium }}" class="sdg-img"></div>
+        <div class="col-sm-9">
+            <div class="page-header">
+                <h4 class="text-info" translate>Goal No: {{ goal.code }}</h4>
+                <h1>{{ goal.name }}</h1>
+            </div>
+            <div class="lead">{{ goal.description }}</div>
+        </div>
+    </div>
 
-<div class="listing">
+    <div class="text-right">
+        <span class="btn btn-primary">
+            <span class="badge">{{ indicators.count }}</span>
+            <translate>Targets</translate>
+        </span>
+    </div>
 
-    <div ng-repeat="indicator in indicators.results" class="well" ng-click="goto('/indicators/' + indicator.id + '/' + indicator.slug)">
-        <div class="row">
-            <div class="col-sm-2"><img class="img-responsive" ng-src="{{ indicator.image_medium }}"></div>
-            <div class="col-sm-10">
-                <div class="row indicator-target">
-                    <div class="col-xs-1 text-center">
-                        <div>
-                            <small class="text-success hidden-xs"><strong translate>Target</strong></small>
+    <div class="listing">
+
+        <div ng-repeat="indicator in indicators.results" class="well" ng-click="goto('/indicators/' + indicator.id + '/' + indicator.slug)">
+            <div class="row">
+                <div class="col-sm-2"><img class="img-responsive" ng-src="{{ indicator.image_medium }}"></div>
+                <div class="col-sm-10">
+                    <div class="row indicator-target">
+                        <div class="col-xs-1 text-center">
+                            <div>
+                                <small class="text-success hidden-xs"><strong translate>Target</strong></small>
+                            </div>
+                            <div>
+                                <i class=" text-info fa fa-dot-circle-o"></i>
+                            </div>
+                            </h4>
                         </div>
-                        <div>
-                            <i class=" text-info fa fa-dot-circle-o"></i>
-                        </div>
-                        </h4>
-                    </div>
-                    <div class="col-xs-11">
-                        <h4 class="">
-                            <a ng-href="/#!/indicators/{{ indicator.id }}/{{ indicator.slug }}" class="text-primary">{{ indicator.target_description }}</a>
-                        </h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-1 text-center">
-                        <div class="text-muted hidden-xs"><strong translate>Indicator</strong></div>
-                        <div class="text-info lead">{{ indicator.code }}</div>
-                    </div>
-                    <div class="col-xs-11">
-                        <div class="lead">
-                            {{ indicator.description }}
+                        <div class="col-xs-11">
+                            <h4 class="">
+                                <a ng-href="/#!/indicators/{{ indicator.id }}/{{ indicator.slug }}" class="text-primary">{{ indicator.target_description }}</a>
+                            </h4>
                         </div>
                     </div>
-                </div>
-                <div>
-                    <div ng-switch="indicator.stats_available" class="pull-right">
-                      <div ng-switch-when="YES" class="label label-success"><i class="fa fa-line-chart"></i> <translate>Statistics available</translate></div>
-                      <div ng-switch-when="PARTIALLY" class="label label-warning"><i class="fa fa-line-chart"></i> <translate>Some of statistics available</translate></div>
-                      <div ng-switch-when="NO" class="label label-danger"><i class="fa fa-line-chart"></i> <translate>Statistics not available</translate></div>
-                      <div ng-switch-when="UNKNOWN" class="label label-default"><i class="fa fa-line-chart"></i> <translate>Statistics availability: Unkonwn</translate></div>
+                    <div class="row">
+                        <div class="col-xs-1 text-center">
+                            <div class="text-muted hidden-xs"><strong translate>Indicator</strong></div>
+                            <div class="text-info lead">{{ indicator.code }}</div>
+                        </div>
+                        <div class="col-xs-11">
+                            <div class="lead">
+                                {{ indicator.description }}
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div ng-switch="indicator.stats_available" class="pull-right">
+                          <div ng-switch-when="YES" class="label label-success"><i class="fa fa-line-chart"></i> <translate>Statistics available</translate></div>
+                          <div ng-switch-when="PARTIALLY" class="label label-warning"><i class="fa fa-line-chart"></i> <translate>Some of statistics available</translate></div>
+                          <div ng-switch-when="NO" class="label label-danger"><i class="fa fa-line-chart"></i> <translate>Statistics not available</translate></div>
+                          <div ng-switch-when="UNKNOWN" class="label label-default"><i class="fa fa-line-chart"></i> <translate>Statistics availability: Unkonwn</translate></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 
 </div>
-
