--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="container">
     <div class="row">
         <div ng-repeat="goal in goals.results" class="col-sm-2 col-no-pad"><a ng-href="/#!/goals/{{ goal.id }}/{{ goal.slug }}"><img ng-src="{{ goal.image_medium }}" class="sdg-img"></a></div>
     </div>
