--- a/app/views/goal.html
+++ b/app/views/goal.html
@@ -1,70 +1,52 @@
-<div class="container">
-
-    </div>
-
-    <div class="row">
-        <div class="col-sm-3"><img ng-src="{{ goal.image_medium }}" class="sdg-img"></div>
-        <div class="col-sm-9">
-            <div class="page-header">
-                <h4 class="text-info" translate>Goal No: {{ goal.code }}</h4>
-                <h1>{{ goal.name }}</h1>
+<div class="page-header-dg" style="background: {{ goal.extras.color_primary }}">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2">
+                <img class="sdg-img" ng-src="{{ goal.image_medium }}">
             </div>
-            <div class="lead">{{ goal.description }}</div>
+            <div class="col-md-6">
+                <h4><a class="subtitle" ng-href="/">{{ goal.plan_name }}</a></h4>
+                <h1>{{ goal.description }}</h1>
+            </div>
         </div>
     </div>
+</div>
 
-    <div class="text-right">
-        <span class="btn btn-primary">
-            <span class="badge">{{ indicators.count }}</span>
-            <translate>Targets</translate>
-        </span>
-    </div>
+<div class="container-wrapper">
+    <div class="container">
 
-    <div class="listing">
+        <div class="listing">
 
-        <div ng-repeat="indicator in indicators.results" class="well" ng-click="goto('/indicators/' + indicator.id + '/' + indicator.slug)">
             <div class="row">
-                <div class="col-sm-2"><img class="img-responsive" ng-src="{{ indicator.image_medium }}"></div>
-                <div class="col-sm-10">
-                    <div class="row indicator-target">
-                        <div class="col-xs-1 text-center">
-                            <div>
-                                <small class="text-success hidden-xs"><strong translate>Target</strong></small>
+                <div ng-repeat="indicator in indicators.results" class="col-sm-3 col-no-pad">
+                    <div class="box-md-wrapper panel panel-default">
+                        <a ng-href="/indicators/{{ indicator.id }}/{{ indicator.slug }}"
+                            class="box-md text-default">
+                            <div class="page-header box-md-header">
+                                <div class="row">
+                                    <div class="col-sm-4 text-center">
+                                        <strong class="text-uppercase" translate>Indictor</strong>
+                                        <h2 style="color: {{ goal.extras.color_primary }}">{{ indicator.code }}</h2>
+                                    </div>
+                                    <div class="col-sm-8">
+                                        <div>{{ indicator.name|truncatechars:150 }}</div>
+                                    </div>
+                                </div>
                             </div>
-                            <div>
-                                <i class=" text-info fa fa-dot-circle-o"></i>
-                            </div>
-                            </h4>
-                        </div>
-                        <div class="col-xs-11">
-                            <h4 class="">
-                                <a ng-href="/#!/indicators/{{ indicator.id }}/{{ indicator.slug }}" class="text-primary">{{ indicator.target_description }}</a>
-                            </h4>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-1 text-center">
-                            <div class="text-muted hidden-xs"><strong translate>Indicator</strong></div>
-                            <div class="text-info lead">{{ indicator.code }}</div>
-                        </div>
-                        <div class="col-xs-11">
-                            <div class="lead">
-                                {{ indicator.description }}
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div ng-switch="indicator.stats_available" class="pull-right">
-                          <div ng-switch-when="YES" class="label label-success"><i class="fa fa-line-chart"></i> <translate>Statistics available</translate></div>
-                          <div ng-switch-when="PARTIALLY" class="label label-warning"><i class="fa fa-line-chart"></i> <translate>Some of statistics available</translate></div>
-                          <div ng-switch-when="NO" class="label label-danger"><i class="fa fa-line-chart"></i> <translate>Statistics not available</translate></div>
-                          <div ng-switch-when="UNKNOWN" class="label label-default"><i class="fa fa-line-chart"></i> <translate>Statistics availability: Unkonwn</translate></div>
+                        </a>
+                        <div class="panel-footer text-right">
+                            <a class="btn btn-default btn-sm"
+                                    ng-href="/indicators/{{ indicator.id }}/{{ indicator.slug }}"
+                                    style="color: {{ goal.extras.color_primary }}">
+                                <i class="fa fa-line-chart"></i>
+                                <translate>View</translate>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
 
     </div>
-
 </div>
