--- a/app/views/indicator.html
+++ b/app/views/indicator.html
@@ -2,14 +2,17 @@
 <div class="page-header-dg" style="background: {{ goal.extras.color_primary }}">
     <div class="container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-sm-2 text-center">
+                <h3 class="text-uppercase" translate>Indicator</h3>
+                <h1>{{ indicator.code }}</h1>
+            </div>
+            <div class="col-sm-8">
+                <h4>
+                    <a class="subtitle" ng-href="/">{{ indicator.plan_name }}</a>
+                </h4>
                 <h1>
                     {{ indicator.name }}
                 </h1>
-                <h4><a class="subtitle" ng-href="/">{{ indicator.plan_name }}</a></h4>
-                <div><a class="subtitle" ng-href="/goals/{{ goal.id }}/{{ goal.slug }}"><strong translate>SDG {{ indicator.goal_code }}</strong></a></div>
-            </div>
-            <div class="col-md-4 text-center">
             </div>
         </div>
     </div>
@@ -23,16 +26,15 @@
             <div class="panel-body">
                 <div class="row page-info">
                     <div class="col-sm-2 text-center">
-                        <strong class="text-uppercase" translate>Indictor</strong>
-                        <h2 style="color: {{ goal.extras.color_primary }}">{{ indicator.code }}</h2>
+                        <strong class="text-uppercase" translate>Goal No</strong>
+                        <h2 style="color: {{ goal.extras.color_primary }}">{{ indicator.goal_code }}</h2>
                     </div>
                     <div class="col-sm-10">
+                        <div class="lead text-muted">
+                            <a class="" ng-href="/goals/{{ goal.id }}/{{ goal.slug }}"  style="color: {{ goal.extras.color_primary }}">{{ goal.description }}</a>
+                        </div>
                         <div>
                             <strong style="color: {{ goal.extras.color_primary }}" translate>Target</strong>: {{ target.description||'-' }}
-                        </div>
-                        <div class="lead text-muted">
-                            <strong class="">Goal:</strong>
-                            <a class="" ng-href="/goals/{{ goal.id }}/{{ goal.slug }}"  style="color: {{ goal.extras.color_primary }}">{{ goal.description }}</a>
                         </div>
                     </div>
                 </div>
