--- a/app/views/indicator.html
+++ b/app/views/indicator.html
@@ -26,7 +26,7 @@
             <div class="panel-body">
                 <div class="row page-info">
                     <div class="col-sm-2 text-center">
-                        <strong class="text-uppercase" translate>Goal No</strong>
+                        <strong class="text-uppercase" ng-if="indicator.goal_code" translate>Goal No</strong>
                         <h2 style="color: {{ goal.extras.color_primary }}">{{ indicator.goal_code }}</h2>
                     </div>
                     <div class="col-sm-10">
@@ -34,7 +34,7 @@
                             <a class="" ng-href="/goals/{{ goal.id }}/{{ goal.slug }}"  style="color: {{ goal.extras.color_primary }}">{{ goal.description }}</a>
                         </div>
                         <div>
-                            <strong style="color: {{ goal.extras.color_primary }}" translate>Target</strong>: {{ target.description||'-' }}
+                            <strong style="color: {{ goal.extras.color_primary }}" ng-if="target.description" translate>Target</strong>: {{ target.description||'-' }}
                         </div>
                     </div>
                 </div>
