--- a/app/views/indicator.html
+++ b/app/views/indicator.html
@@ -43,49 +43,61 @@
         </div>
 
         <div id="components-charts">
-            <div ng-repeat="component in components.results" class="panel panel-default">
-                <div class="page-header">
-                    <h2 class="text-center">{{ component.name }}</h2>
-                </div>
-                <div class="container-fluid">
-                    <nvd3 ng-if="component.progress && component.progress.length && component.target_value" options="barChart"
-                            data="component.chart">
-                    </nvd3>
-                    <nvd3 ng-if="component.progress && component.progress.length && !component.target_value" options="barChart"
-                            data="component.chart">
-                    </nvd3>
+            <div ng-repeat="component in components.results">
+                <div ng-repeat="chart in component.charts" class="panel panel-default">
+                    <div class="page-header">
+                        <h2 class="text-center">{{ chart.title }}</h2>
+                    </div>
+                    <div class="container-fluid">
+                        <nvd3 ng-if="!chart.hasOneValue" options="chart.options"
+                                data="chart.data">
+                        </nvd3>
+                        <div ng-if="chart.hasOneValue" class="text-center chart-single-value jumbotron">
+                            <div><strong class="text-muted">{{ chart.data[0].values[0].area_name }}</strong></div>
+                            <h1 style="color: {{ goal.extras.color_primary }}">
+                                {{ chart.data[0].values[0].value }}
+                            </h1>
+                            <h3 ng-if="component.value_unit" class="subtitle">{{ component.value_unit }}</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div id="components-tables">
             <div class="row">
-                <div ng-repeat="component in components.results" class=col-md-6>
-                    <div class="panel panel-default">
-                        <div class="page-header">
-                            <h2 class="text-center">{{ component.name }}</h2>
-                        </div>
-                        <div class="panel-body">
-                            <table class="table table-striped">
-                                <thead>
-                                    <tr>
-                                        <th translate>AREA</th>
-                                        <th translate>YEAR</th>
-                                        <th class="text-right" translate>VALUE <span ng-if="component.value_unit">({{ component.value_unit }})</span></th>
-                                    </tr>
-                                </thead>
-                                <tr ng-repeat="progress in component.progress">
-                                    <td>{{ progress.area_name }}</td>
-                                    <td>{{ progress.year }}</td>
-                                    <td class="text-right">{{ progress.value }}</td>
-                                </tr>
-                            </table>
-                        </div>
-                        <div class="panel-footer text-right">
-                            <a class="btn btn-primary"
-                                    href="{{ settings.API_ROOT_URL }}/progress?component={{ component.id }}&format=csv" translate>
-                                Download data
-                            </a>
+                <div ng-repeat="component in components.results">
+                    <div class="col-sm-6" ng-repeat="(areaType, progress) in component.progress">
+                        <div class="panel panel-default">
+                            <div class="page-header">
+                                <h3 class="text-center">{{ component.name }}</h3>
+                            </div>
+                            <div class="panel-body">
+                                <table class="table table-striped table-scrollable table-progress">
+                                    <thead>
+                                        <tr>
+                                            <th translate>Area</th>
+                                            <th translate>Year</th>
+                                            <th class="text-right" translate>Value <span ng-if="component.value_unit">({{ component.value_unit }})</span></th>
+                                            <th translate>Group</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr ng-repeat="p in progress">
+                                            <td>{{ p.area_name }}</td>
+                                            <td>{{ p.year }}</td>
+                                            <td class="text-right">{{ p.value }}</td>
+                                            <td>{{ p.groups.join(', ') }}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="panel-footer text-right">
+                                <a class="btn btn-primary"
+                                        ng-href="{{ settings.API_ROOT_URL }}/progress?component={{ component.id }}&area_type={{ areaType }}&format=csv">
+                                    <i class="fa fa-download"></i> <span translate>Download data</span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
