--- a/app/views/indicator.html
+++ b/app/views/indicator.html
@@ -65,39 +65,37 @@
         </div>
 
         <div id="components-tables">
-            <div class="row">
-                <div ng-repeat="component in components.results">
-                    <div class="col-sm-6" ng-repeat="(areaType, progress) in component.progress">
-                        <div class="panel panel-default">
-                            <div class="page-header">
-                                <h3 class="text-center">{{ component.name }}</h3>
-                            </div>
-                            <div class="panel-body">
-                                <table class="table table-striped table-scrollable table-progress">
-                                    <thead>
-                                        <tr>
-                                            <th translate>Area</th>
-                                            <th translate>Year</th>
-                                            <th class="text-right" translate>Value <span ng-if="component.value_unit">({{ component.value_unit }})</span></th>
-                                            <th translate>Group</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr ng-repeat="p in progress">
-                                            <td>{{ p.area_name }}</td>
-                                            <td>{{ p.year }}</td>
-                                            <td class="text-right">{{ p.value|number }}</td>
-                                            <td>{{ p.groups.join(', ') }}</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div class="panel-footer text-right">
-                                <a class="btn btn-primary"
-                                        ng-href="{{ settings.API_ROOT_URL }}/progress?component={{ component.id }}&area_type={{ areaType }}&format=csv">
-                                    <i class="fa fa-download"></i> <span translate>Download data</span>
-                                </a>
-                            </div>
+            <div ng-repeat="component in components.results">
+                <div ng-repeat="(areaType, progress) in component.progress">
+                    <div class="panel panel-default">
+                        <div class="page-header">
+                            <h3 class="text-center">{{ component.name }}</h3>
+                        </div>
+                        <div class="panel-body">
+                            <table class="table table-striped table-scrollable table-progress">
+                                <thead>
+                                    <tr>
+                                        <th translate>Area</th>
+                                        <th translate>Year</th>
+                                        <th class="text-right" translate>Value <span ng-if="component.value_unit">({{ component.value_unit }})</span></th>
+                                        <th class="text-center" translate>Group</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="p in progress">
+                                        <td>{{ p.area_name }}</td>
+                                        <td>{{ p.year }}</td>
+                                        <td class="text-right">{{ p.value|number }}</td>
+                                        <td class="text-center">{{ p.groups.join(', ') }}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="panel-footer text-right">
+                            <a class="btn btn-primary"
+                                    ng-href="{{ settings.API_ROOT_URL }}/progress?component={{ component.id }}&area_type={{ areaType }}&format=csv">
+                                <i class="fa fa-download"></i> <span translate>Download data</span>
+                            </a>
                         </div>
                     </div>
                 </div>
