--- a/app/views/goal.html
+++ b/app/views/goal.html
@@ -1,4 +1,4 @@
-<div class="page-header-dg" style="background: {{ goal.extras.color_primary }}">
+<div class="page-header-dg themed" style="background: {{ goal.extras.color_primary }}">
     <div class="container">
         <div class="row">
             <div class="col-md-2">
