--- a/app/views/indicator.html
+++ b/app/views/indicator.html
@@ -1,5 +1,5 @@
 
-<div class="page-header-dg" style="background: {{ goal.extras.color_primary }}">
+<div class="page-header-dg themed" style="background: {{ goal.extras.color_primary }}">
     <div class="container">
         <div class="row">
             <div class="col-sm-2 text-center">
@@ -46,7 +46,11 @@
             <div ng-repeat="component in components.results">
                 <div ng-repeat="chart in component.charts" class="panel panel-default">
                     <div class="page-header">
-                        <h2 class="text-center">{{ chart.title }}</h2>
+                        <h2 class="text-center">
+                            <a class="text-default" ng-href="/components/{{ component.id }}/{{ component.slug }}">
+                                <strong>{{ chart.title }}</strong>
+                            </a>
+                        </h2>
                     </div>
                     <div class="container-fluid">
                         <nvd3 ng-if="!chart.hasOneValue" options="chart.options"
@@ -69,7 +73,11 @@
                 <div ng-repeat="(areaType, progress) in component.progress">
                     <div class="panel panel-default">
                         <div class="page-header">
-                            <h3 class="text-center">{{ component.name }}</h3>
+                            <h3 class="text-center">
+                                <a class="text-default" ng-href="/components/{{ component.id }}/{{ component.slug }}">
+                                    <strong>{{ component.name }}</strong>
+                                </a>
+                            </h3>
                         </div>
                         <div class="panel-body">
                             <table class="table table-striped table-scrollable table-progress">
