add infinite scroll on search

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -41,7 +41,7 @@
 
         <div class="row">
             <div class="col-sm-9">
-                <div class="listing">
+                <div class="listing" infinite-scroll="loadMore()" infinite-scroll-distance="2">
                     <div ng-repeat="result in data.results" class="panel panel-default" ng-click="goto_object(result.object_type, [result.id, result.slug])">
                         <div class="panel-body">
                             <div class="row">
@@ -80,8 +80,9 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="text-center" ng-show="loadingMore"><i class="fa fa-spinner fa-spin fa-2x text-info"></i></div>
                 </div>
+
             </div>
         </div>
 
