--- a/app/views/indicator.html
+++ b/app/views/indicator.html
@@ -100,6 +100,10 @@
                             </table>
                         </div>
                         <div class="panel-footer text-right">
+                            <a class="btn btn-default"
+                                    ng-href="/components/{{ component.id }}/{{ component.slug }}">
+                                <i class="fa fa-eye"></i> <span translate>More details</span>
+                            </a>
                             <a class="btn btn-primary"
                                     ng-href="{{ settings.API_ROOT_URL }}/progress?component={{ component.id }}&area_type={{ areaType }}&format=csv">
                                 <i class="fa fa-download"></i> <span translate>Download data</span>
