--- a/app/views/indicator.html
+++ b/app/views/indicator.html
@@ -68,6 +68,24 @@
             </div>
         </div>
 
+        <div id="components-maps">
+            <div class ng-repeat="component in components.results|filter:mapsReady:true">
+                <div ng-repeat="map in component.maps" class="panel panel-default">
+                    <div class="page-header">
+                        <a class="text-default" ng-href="/components/{{ component.id }}/{{ component.slug }}">
+                            <h2 class="text-center">
+                                <strong>{{ map.title }}</strong>
+                                <span class="text-info" ng-if="component.value_unit">({{ component.value_unit }})</span>
+                            </h2>
+                        </a>
+                    </div>
+                    <leaflet id="{{ map.id }}" style="height: 500px;background:#EEE;display:block"
+                            defaults="map.options.defaults" lf-center="map.options.center">
+                    </leaflet>
+                </div>
+            </div>
+        </div>
+
         <div id="components-tables">
             <div ng-repeat="component in components.results">
                 <div ng-repeat="(areaType, progress) in component.progress">
